--- a/Predictor.ipynb
+++ b/Predictor.ipynb
@@ -3,9 +3,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "TAREA SEMANA 11 \n",
+        
         "\n",
-        "JOSE CARLOS ARREGOCES CASTRO"
+        "ING.JOSEARREGOCES"
       ],
       "metadata": {
         "id": "mvcJUAM6Md7x"
